--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,9 @@
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
-                <ul class="actions">
+                <!--<ul class="actions">
                     <li><a href="#one" class="button next scrolly">Get Started</a></li>
-                </ul>
+                </ul>-->
             </div>
         </div>
     </section>
@@ -37,7 +37,8 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>Massa libero</h2>
+                    <img src="assets/images/pic07.jpg">
+                    <h2>Gaia Xchange Data Marketplace</h2>
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
