--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,20 @@
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                    <li><a href="landing.html" class="button next">Read Case Study</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="two">
+            <div class="inner">
+                <header class="major">
+                    <img src="assets/images/pic07.jpg">
+                    <h2>Employee Reward and Recognition Portal</h2>
+                </header>
+                <p>{{ content }}</p>
+                <ul class="actions">
+                    <li><a href="landing.html" class="button next">Read Case Study</a></li>
                 </ul>
             </div>
         </section>
