--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,12 +5,15 @@
 <header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
 	<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
 	<nav>
-		<a href="#menu">Menu</a>
+		<!--<a href="#menu">Menu</a>-->
+		<a href="home.html">Work</a>
+		<a href="about.html">About</a>
+		<a href="landing.html">Blog</a>
 	</nav>
 </header>
 
 <!-- Menu -->
-<nav id="menu">
+<!--<nav id="menu">
 	<ul class="links">
         {% for page in site.pages %}
 		    {% if page.layout == "home" %}
@@ -22,9 +25,9 @@
 		        <li><a href="{{ page.url | absolute_url }}">{{ page.title }}</a></li>
 		    {% endif %}
 		{% endfor %}
-	</ul>
-	<ul class="actions vertical">
+	</ul>-->
+	<!--<ul class="actions vertical">
 		<li><a href="#" class="button special fit">Get Started</a></li>
 		<li><a href="#" class="button fit">Log In</a></li>
 	</ul>
-</nav>
+</nav>-->
