--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Read Case Study</a></li>
+                    <li><a href="gaia-xchange-data-marketplace.html" class="button next">Read Case Study</a></li>
                 </ul>
             </div>
         </section>
@@ -55,7 +55,7 @@
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Read Case Study</a></li>
+                    <li><a href="employee-reward-and-recognition-portal.html" class="button next">Read Case Study</a></li>
                 </ul>
             </div>
         </section>
