--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 	<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
 	<nav>
 		<!--<a href="#menu">Menu</a>-->
-		<a href="http://localhost:4000//">Work</a>
+		<a href="">Work</a>
 		<a href="about.html">About</a>
 		<a href="landing.html">Blog</a>
 	</nav>
