--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,12 +3,12 @@
 
 <!-- Header -->
 <header id="header"{% if page.layout == "landing" %} class="alt style2"{% endif %}{% if page.layout == "home" %} class="alt"{% endif %}>
-	<a href="{{ "" | absolute_url }}/" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
+	<a href="index.html" class="logo"><strong>{{ site.title }}</strong> <span>{{ site.subtitle }}</span></a>
 	<nav>
 		<!--<a href="#menu">Menu</a>-->
-		<a href="http://localhost:4000//">Work</a>
+		<!--<a href="index.html/">Work</a>-->
 		<a href="about.html">About</a>
-		<a href="landing.html">Blog</a>
+		<!--<a href="landing.html">Blog</a>-->
 	</nav>
 </header>
 
